--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,15 @@
 services:
   - type: web
     name: entalk-webhook
-    env: static
-    staticPublishPath: .
-    buildCommand: ""
+    env: docker
+    plan: free
+    dockerfilePath: Dockerfile
+    envVars:
+      - key: DB_HOST
+        value: your-db-host
+      - key: DB_NAME
+        value: your-db-name
+      - key: DB_USER
+        value: your-db-user
+      - key: DB_PASS
+        value: your-db-password
